removing unnecessary things